[package]
name = "abbegm"
version = "0.7.1"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]

description = "externally guided motion for ABB industrial robots"
keywords = ["robotics", "abb", "egm", "motion", "industrial"]
categories = ["science::robotics", "network-programming"]
repository = "https://github.com/robohouse-delft/abbegm-rs"
documentation = "https://docs.rs/abbegm"
readme = "README.md"

edition = "2018"

[features]
default = ["tokio"]

[dependencies]
nalgebra = { version = ">=0.21.0, <0.30", optional = true }
prost = "0.9.0"
tokio = { version = "1.11.0", optional = true, features = ["net"] }

[dev-dependencies]
abbegm = { path = ".", features = ["nalgebra", "tokio"] }
assert2 = "0.3.2"
structopt = "0.3.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.11"
env_logger = "0.9.0"
rand = "0.8.4"
